@@ -1,10 +1,13 @@
 package com.paragon.mixins;
 
 import com.paragon.Paragon;
+import com.paragon.impl.event.player.ClickBothMouseButtonsEvent;
 import com.paragon.impl.event.render.GetFramerateLimitEvent;
 import com.paragon.impl.event.render.gui.GuiUpdateEvent;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.entity.EntityPlayerSP;
 import net.minecraft.client.gui.GuiScreen;
+import net.minecraft.client.multiplayer.PlayerControllerMP;
 import net.minecraft.client.multiplayer.WorldClient;
 import net.minecraft.client.settings.GameSettings;
 import net.minecraft.util.math.MathHelper;
@@ -13,10 +16,11 @@ import org.spongepowered.asm.mixin.Overwrite;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 @Mixin(Minecraft.class)
-public class MixinMinecraft {
+public abstract class MixinMinecraft {
 
     @Shadow
     public WorldClient world;
@@ -26,6 +30,10 @@ public class MixinMinecraft {
 
     @Shadow
     public GuiScreen currentScreen;
+
+    @Shadow public PlayerControllerMP playerController;
+
+    @Shadow public EntityPlayerSP player;
 
     @Inject(method = "displayGuiScreen", at = @At("HEAD"), cancellable = true)
     public void hookDisplayGuiScreen(GuiScreen guiScreenIn, CallbackInfo ci) {
@@ -51,6 +59,22 @@ public class MixinMinecraft {
         }
 
         return world == null && this.currentScreen != null ? MathHelper.clamp(this.gameSettings.limitFramerate, 0, 240) : this.gameSettings.limitFramerate;
+    }
+
+    @Redirect(method = "sendClickBlockToController", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/entity/EntityPlayerSP;isHandActive()Z"))
+    public boolean hookSendClickBlockToController(EntityPlayerSP instance) {
+        ClickBothMouseButtonsEvent event = new ClickBothMouseButtonsEvent();
+        Paragon.INSTANCE.getEventBus().post(event);
+
+        return !event.isCancelled() && this.player.isHandActive();
+    }
+
+    @Redirect(method = "rightClickMouse", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/multiplayer/PlayerControllerMP;getIsHittingBlock()Z"))
+    public boolean hookRightClickMouse(PlayerControllerMP instance) {
+        ClickBothMouseButtonsEvent event = new ClickBothMouseButtonsEvent();
+        Paragon.INSTANCE.getEventBus().post(event);
+
+        return !event.isCancelled() && this.playerController.getIsHittingBlock();
     }
 
 }
