@@ -1,0 +1,9 @@
+package com.paragon.impl.event.player
+
+import com.paragon.bus.event.CancellableEvent
+
+/**
+ * @author Surge
+ * @since 07/12/2022
+ */
+class ClickBothMouseButtonsEvent : CancellableEvent()
